# octoroute

./: .gitignore  CHANGELOG.md  Cargo.toml  Cross.toml  LICENSE  README.md  clippy.toml  config.toml  justfile  method  method2  test
.github/workflows/: ci.yml  release.yml
benches/: routing.rs
docs/: api-reference.md  architecture.md  configuration.md  deployment.md  development.md  observability.md  technical-design.md
src/: cli.rs  config.rs  error.rs  lib.rs  main.rs  metrics.rs  telemetry.rs
src/handlers/: chat.rs  health.rs  metrics.rs  mod.rs  models.rs
src/handlers/openai/: completions.rs  extractor.rs  mod.rs  models.rs  streaming.rs  types.rs
src/middleware/: mod.rs  request_id.rs
src/models/: client.rs  endpoint_name.rs  health.rs  mod.rs  selector.rs
src/models/selector/: balanced.rs  balanced.rs.bak3  mod.rs  tests_basic.rs  tests_basic.rs.bak3  tests_basic.rs.bak5  tests_exclusion.rs  tests_priority.rs  tests_weighted.rs  tests_weighted.rs.bak3  tests_weighted.rs.bak5
src/router/: hybrid.rs  llm_based.rs  mod.rs  rule_based.rs  rule_based.rs.bak3
src/router/llm_based/: mod.rs  (+7 more)
src/shared/: mod.rs  query.rs
tests/: all_tier_validation.rs  all_tiers_exhausted.rs  background_health_checks.rs  chat_integration.rs  chat_request_validation.rs  chat_response_health_tracking_warnings.rs  cli_config_command.rs  concurrent_health_race_test.rs  concurrent_health_state_transitions.rs  concurrent_health_updates.rs  concurrent_interleaved_health_tracking.rs  concurrent_routing.rs  config_encapsulation.rs  config_error_context.rs  config_validation.rs  edge_cases.rs  edge_cases.rs.bak2  edge_cases.rs.bak3  error_classification.rs  error_context.rs  error_messages.rs  exponential_backoff_timing.rs  health.rs  health_check_url.rs  health_error_propagation.rs  health_tracking_failures_visibility.rs  health_type_safety.rs  hybrid_dual_failure.rs  hybrid_error_context.rs  immediate_health_recovery.rs  llm_router_health_tracking_resilience.rs  llm_routing_success.rs  metrics_failure_tracking.rs  metrics_health_tracking_labels.rs  metrics_instrumentation.rs  metrics_recording_failure_labels.rs  openai_completions.rs  openai_http_methods.rs  openai_models.rs  openai_streaming.rs  (+15 more)
